--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:04:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:05:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -230,25 +230,9 @@ Not started</td>
 Not started</td>
       <td>Webb Simpson E
 -1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm(W) +3
++1 thru 7</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -284,6 +268,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
@@ -294,10 +294,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 6</td>
-      <td class="greyout">Viktor Hovland +3
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 15</td>
+      <td class="greyout">Jon Rahm +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -357,11 +357,11 @@ Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td>Rory McIlroy +2
-E thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 6</td>
-      <td class="greyout">Robert MacIntyre +3
+E thru 8</td>
+      <td class="greyout leftborder">Robert MacIntyre +3
 +1 thru 5</td>
+      <td class="greyout">Jon Rahm +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -421,26 +421,10 @@ E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Patrick Cantlay(W) +2
-+1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -454,8 +438,8 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch +1
 -1 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm(W) +3
++1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -471,8 +455,24 @@ E thru 1</td>
       <td>Tiger Woods +1
 E thru 4</td>
       <td class="greyout leftborder">Rory McIlroy(W) +2
-E thru 7</td>
+E thru 8</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Patrick Cantlay(W) +2
++1 thru 4</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -500,28 +500,12 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
-      <td class="greyout leftborder">Patrick Cantlay +2
+      <td>Patrick Cantlay +2
 +1 thru 4</td>
+      <td class="greyout leftborder">Jon Rahm(W) +3
++1 thru 7</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -551,7 +535,7 @@ Not started</td>
       <td>Tiger Woods(W) +1
 E thru 4</td>
       <td class="greyout leftborder">Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 15</td>
     </tr>
@@ -588,6 +572,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -2
@@ -613,21 +613,21 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Rory McIlroy +2
-E thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 6</td>
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Scottie Scheffler -8
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td>Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -637,15 +637,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Tiger Woods +1
 E thru 4</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -653,15 +653,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Collin Morikawa(W) -1
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -669,15 +669,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Justin Thomas -1
 E thru 1</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -693,7 +693,7 @@ E thru 1</td>
       <td>Tiger Woods +1
 E thru 4</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout">Gary Woodland
@@ -709,7 +709,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
@@ -717,97 +717,33 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
+      <td>Viktor Hovland(W) +3
 -1 thru 15</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 E thru 1</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td>Robert MacIntyre +3
-+1 thru 5</td>
-      <td class="greyout leftborder">Daniel Berger +4
-+2 thru 9</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">4</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Rory McIlroy(W) +2
-E thru 7</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 15</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -828,16 +764,80 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas(W) -1
+E thru 1</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Robert MacIntyre +3
++1 thru 5</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 10</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">5</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Rory McIlroy(W) +2
+E thru 8</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -1
 E thru 1</td>
       <td>Patrick Cantlay(W) +2
 +1 thru 4</td>
       <td>Rory McIlroy +2
-E thru 7</td>
-      <td>Jon Rahm +2
-E thru 6</td>
+E thru 8</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -845,13 +845,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td>Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout leftborder">Bubba Watson +6
@@ -861,31 +861,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 15</td>
-      <td class="greyout leftborder">Daniel Berger +4
-+2 thru 9</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td>Tony Finau +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td>Patrick Reed +4
 +1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -940,8 +940,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Yellow in Augusta</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas(W)</td>
-      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -1018,8 +1018,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Bryan Francis</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas(W)</td>
-      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
