--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:04:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:05:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -196,10 +196,10 @@ Not started</td>
 E thru 1</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Patrick Cantlay +2
+      <td>Patrick Cantlay +2
 +1 thru 4</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
       <td class="greyout">Tyrrell Hatton +4
 +2 thru 6</td>
     </tr>
@@ -231,7 +231,7 @@ E thru 1</td>
       <td>Tommy Fleetwood(W) +2
 -1 thru 13</td>
       <td class="greyout leftborder">Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 15</td>
     </tr>
@@ -262,8 +262,8 @@ Not started</td>
 Not started</td>
       <td>Tony Finau +4
 +2 thru 10</td>
-      <td class="greyout leftborder">Daniel Berger +4
-+2 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -275,7 +275,7 @@ Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Rory McIlroy +2
-E thru 7</td>
+E thru 8</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -301,29 +301,29 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td>Robert MacIntyre +3
 +1 thru 5</td>
-      <td class="greyout leftborder">Daniel Berger +4
-+2 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 10</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
       <td>Tony Finau +4
 +2 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 6</td>
       <td>Viktor Hovland +3
 -1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
       <td>Patrick Reed +4
 +1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
