--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:07:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:08:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,13 +157,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +2
@@ -173,13 +173,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
       <td>Corey Conners -1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -307,7 +307,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Matthew Fitzpatrick -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -329,6 +329,38 @@ Not started</td>
       <td class="greyout leftborder">Tyrrell Hatton +6
 +4 thru 7</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-8</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td class="greyout leftborder">Marc Leishman +2
+-2 thru 14</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 4</td>
+      <td class="greyout leftborder">Will Zalatoris -1
+Not started</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -364,35 +396,19 @@ E thru 8</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-7</td>
-      <td>Hideki Matsuyama -3
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -8
 Not started</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td class="greyout leftborder">Marc Leishman +2
--2 thru 14</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-7</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 3</td>
-      <td class="greyout leftborder">Will Zalatoris -1
-Not started</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -408,22 +424,6 @@ Not started</td>
 +1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -444,18 +444,34 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-5</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-5</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Tiger Woods +1
-E thru 4</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +2
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Rory McIlroy(W) +2
 E thru 8</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 5</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -476,19 +492,19 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-4</td>
-      <td>Shane Lowry -3
-Not started</td>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
+      <td>Will Zalatoris -1
+Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout">Brooks Koepka
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -508,36 +524,52 @@ Not started</td>
 -1 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
+      <td>Cameron Smith(W) -2
 Not started</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Will Zalatoris -1
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Corey Conners -1
 Not started</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Tiger Woods(W) +1
-E thru 4</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 E thru 8</td>
+      <td class="greyout leftborder">Tiger Woods(W) +3
++2 thru 5</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-2</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -547,7 +579,7 @@ Not started</td>
       <td>Dustin Johnson(W) -2
 Not started</td>
       <td>Matthew Fitzpatrick -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Tony Finau +4
 +2 thru 10</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -588,35 +620,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -2
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">0</td>
+      <td>Hideki Matsuyama -3
 Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-1</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -631,22 +647,6 @@ E thru 8</td>
       <td>Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Tiger Woods +1
-E thru 4</td>
-      <td>Jon Rahm(W) +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
@@ -668,38 +668,6 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Jon Rahm(W) +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa(W) -1
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Tiger Woods +1
-E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -1
@@ -713,6 +681,38 @@ E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Collin Morikawa(W) -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 5</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -732,17 +732,49 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Don Shaw</td>
       <td class="bigbold">3</td>
+      <td>Cameron Smith -2
+Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
       <td>Jon Rahm(W) +3
 +1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele
+      <td>Tiger Woods +3
++2 thru 5</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm(W) +3
++1 thru 7</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -764,22 +796,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td>Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">4</td>
       <td>Corey Conners(W) -1
@@ -792,22 +808,6 @@ Not started</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 10</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm(W) +3
-+1 thru 7</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -829,9 +829,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas -1
-E thru 1</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
       <td>Patrick Cantlay(W) +2
 +1 thru 4</td>
       <td>Rory McIlroy +2
@@ -840,6 +840,22 @@ E thru 8</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -857,22 +873,6 @@ E thru 8</td>
       <td class="greyout leftborder">Bubba Watson +6
 +4 thru 6</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td>Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 10</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -1030,8 +1030,8 @@ Missed Cut</td>
     <tr>
       <td class="bigbold greyout">Benjac</td>
       <td class="bigbold greyout">-</td>
-      <td class="greyout">Cameron Smith</td>
       <td class="greyout">Justin Thomas(W)</td>
+      <td class="greyout">Cameron Smith</td>
       <td class="greyout">Rory McIlroy</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
